kubernetes/apps/media/flood/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flood
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: flood
  template:
    metadata:
      labels:
        app: flood
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1001
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: flood
        image: jesec/flood:4.8.4@sha256:3b80bb2d6764045981d87c5add0ce64c59e87fe84d2feb3bd343d2cbff28acf0
        resources: {}
        volumeMounts:
        - name: flood-config
          mountPath: /config
        - name: flood-data
          mountPath: /data
      volumes:
      - name: flood-config
        persistentVolumeClaim:
          claimName: flood-config
      - name: flood-data
        persistentVolumeClaim:
          claimName: flood-data
